<resources>
    <string name="app_name">IsoMarks</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_banner">Log In to Continue</string>
    <string name="register_banner">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_below">Sign Up below:</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username">Username</string>
    <string name="_0712345678">Phone e.g 0712345678</string>
    <string name="sch_id">School code</string>
    <string name="Sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
<<<<<<< HEAD
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>

=======
    <string-array name="institutions">
        <item>School A</item>
        <item>School B</item>
        <item>School C</item>
    </string-array>
    <string name="title_activity_landing_admin">landing_admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

>>>>>>> 33265c5b6f300f2cd1651471dceed3fbdf6d8f58
</resources>
