<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/TeacherImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_teaching_svg"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/login_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_banner"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/TeacherImage"
        android:layout_centerHorizontal="true"
        />

<!--
        <EditText
            android:id="@+id/Email"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:layout_below="@+id/login_banner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/input_field"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:autofillHints=""
            tools:targetApi="o" />
  -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:id="@+id/test"
        android:layout_height="65dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_banner"
        android:hint="@string/prompt_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:id="@+id/test2"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/test"
        app:endIconMode="password_toggle"
        android:hint="@string/prompt_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>
<!--
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_below="@+id/test"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
         />

    -->
    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/test2"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        />
    <Button
        android:id="@+id/login"
        android:layout_width="156dp"
        android:layout_height="55dp"
        android:layout_below="@+id/resetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/button"
        android:text="@string/title_activity_login"
        android:textColor="#ffffff"
         />



    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyle"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login"
        android:layout_marginTop="88dp"
        android:visibility="gone"
         />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/don_t_have_an_account"
        android:textSize="14sp"
         />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
         />

    </LinearLayout>
    <!--
    <TextView
        android:layout_width="165dp"
        android:layout_height="28dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="20sp" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="420dp"
            android:autofillHints=""
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_banner"
            app:layout_constraintVertical_bias="0.505"
            tools:targetApi="o" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginBottom="308dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        app:layout_constraintVertical_bias="0.58" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyle"
            android:layout_width="46dp"
            android:layout_height="41dp"
            android:layout_marginTop="88dp"
            android:layout_marginBottom="192dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />



        <TextView
            android:id="@+id/resetPassword"
            android:layout_width="121dp"
            android:layout_height="37dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="264dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="128dp"
            android:text="@string/don_t_have_an_account"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/register"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/register"
            android:layout_width="89dp"
            android:layout_height="77dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="44dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.835"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/login"
            android:layout_width="156dp"
            android:layout_height="55dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="185dp"
            android:background="@drawable/button"
            android:text="@string/title_activity_login"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetPassword"
            app:layout_constraintVertical_bias="1.0" />

            -->
</RelativeLayout>
